[package]
name = "public-bookmarks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0"
actix-rt = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = { version = "2.8.2", default-features = false, features = ["tokio-runtime"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.9"
chrono = "0.4"
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
actix-multipart = "0.6.1"
