[package]
name = "public-bookmarks"
version = "0.1.2"
edition = "2021"

[profile.release]
panic = 'abort'

[dependencies]
actix-web = "4.0"
actix-rt = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = { version = "2.8.2", default-features = false, features = ["tokio-runtime"] }
uuid = { version = "1", features = ["v4"] }
sha256 = "1.5.0"
chrono = "0.4"
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
actix-multipart = "0.6.1"
anyhow = "1.0"
dotenv = "0.15.0"
